Add JSON v3 parser tests